--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_3d_controller: ^1.3.1
+  flutter_svg: ^2.0.10+1
+  url_launcher: ^6.2.6
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
